@@ -46,6 +46,10 @@ User visible changes
   be changed because Mac OS X pathnames are UTF-8 strings, not byte sequences.
   See <http://clisp.org/impnotes/encoding.html#path-enc> for details.
 
+* Mixing &OPTIONAL and &KEY in the same lambda list is a bad design
+  and now triggers a STYLE-WARNING during compilation.
+  See <http://clisp.org/impnotes/compilation.html#key-optional> for details.
+
 * Bug fixes:
   + Fix documentation strings handling for structs (bug#3040648).
   + Fix SCREEN behavior when the window is resized.
